fix: Use command for apache instead of service (Docker compatible)

--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -14,10 +14,10 @@
   notify: Restart Apache
 
 - name: Ensure Apache is running
-  service:
-    name: apache2
-    state: started
-    enabled: yes
+  command: httpd -k start
+  register: apache_start
+  failed_when: "'already running' not in apache_start.stderr and apache_start.rc != 0"
+  changed_when: apache_start.rc == 0
 
 # FIX: Replaced 'include' with 'include_tasks'
 - name: Configure Virtual Hosts
